refactor AND clause and SET clause