@@ -480,99 +480,44 @@ abstract class CriteriaSupports {
 
 
         @Override
-        public final SR set(F field, Expression value) {
-            this.consumer.accept(SQLs._itemPair(field, null, value));
+        public final SR set(F field, @Nullable Object value) {
+            this.consumer.accept(SQLs._itemPair(field, null, Expressions.wrapRight(field, value)));
             return (SR) this;
         }
 
         @Override
-        public final <R extends AssignmentItem> SR set(F field, Supplier<R> supplier) {
-            return this.onAddAssignmentItemPair(field, supplier.get());
-        }
-
-        @Override
-        public final <R extends AssignmentItem> SR set(F field, Function<F, R> function) {
-            return this.onAddAssignmentItemPair(field, function.apply(field));
-        }
-
-        @Override
-        public final <E, R extends AssignmentItem> SR set(F field, BiFunction<F, E, R> valueOperator, @Nullable E value) {
+        public final <E> SR set(F field, BiFunction<F, E, AssignmentItem> valueOperator, @Nullable E value) {
             return this.onAddAssignmentItemPair(field, valueOperator.apply(field, value));
         }
 
         @Override
-        public final <K, V, R extends AssignmentItem> SR set(F field, BiFunction<F, V, R> valueOperator,
-                                                             Function<K, V> function, K key) {
-            return this.onAddAssignmentItemPair(field, valueOperator.apply(field, function.apply(key)));
-        }
-
-        @Override
-        public final <E, V, R extends AssignmentItem> SR set(F field, BiFunction<F, V, R> fieldOperator,
-                                                             BiFunction<F, E, V> valueOperator, E value) {
+        public final <E> SR set(F field, BiFunction<F, Expression, AssignmentItem> fieldOperator,
+                                BiFunction<F, E, Expression> valueOperator, @Nullable E value) {
             return this.onAddAssignmentItemPair(field, fieldOperator.apply(field, valueOperator.apply(field, value)));
         }
 
-        @Override
-        public final <K, V, U, R extends AssignmentItem> SR set(F field, BiFunction<F, U, R> fieldOperator,
-                                                                BiFunction<F, V, U> valueOperator,
-                                                                Function<K, V> function, K key) {
-            return this.onAddAssignmentItemPair(field, fieldOperator.apply(field, valueOperator.apply(field, function.apply(key))));
-        }
 
         @Override
-        public final <R extends AssignmentItem> SR ifSet(F field, Supplier<R> supplier) {
-            final R item;
-            if ((item = supplier.get()) != null) {
-                this.onAddAssignmentItemPair(field, item);
+        public final SR ifSet(F field, @Nullable Object value) {
+            if (value != null) {
+                this.onAddAssignmentItemPair(field, Expressions.wrapRight(field, value));
             }
             return (SR) this;
         }
 
         @Override
-        public final <R extends AssignmentItem> SR ifSet(F field, Function<F, R> function) {
-            final R item;
-            if ((item = function.apply(field)) != null) {
-                this.onAddAssignmentItemPair(field, item);
-            }
-            return (SR) this;
-        }
-
-        @Override
-        public final <E, R extends AssignmentItem> SR ifSet(F field, BiFunction<F, E, R> valueOperator,
-                                                            Supplier<E> supplier) {
-            final E value;
-            if ((value = supplier.get()) != null) {
+        public final <E> SR ifSet(F field, BiFunction<F, E, AssignmentItem> valueOperator, @Nullable E value) {
+            if (value != null) {
                 this.onAddAssignmentItemPair(field, valueOperator.apply(field, value));
             }
             return (SR) this;
         }
 
-        @Override
-        public final <K, V, R extends AssignmentItem> SR ifSet(F field, BiFunction<F, V, R> valueOperator,
-                                                               Function<K, V> function, K key) {
-            final V value;
-            if ((value = function.apply(key)) != null) {
-                this.onAddAssignmentItemPair(field, valueOperator.apply(field, value));
-            }
-            return (SR) this;
-        }
 
         @Override
-        public final <E, V, R extends AssignmentItem> SR ifSet(F field, BiFunction<F, V, R> fieldOperator,
-                                                               BiFunction<F, E, V> valueOperator, Supplier<E> getter) {
-            final E value;
-            if ((value = getter.get()) != null) {
-                this.onAddAssignmentItemPair(field, fieldOperator.apply(field, valueOperator.apply(field, value)));
-            }
-            return (SR) this;
-        }
-
-        @Override
-        public final <K, V, U, R extends AssignmentItem> SR ifSet(F field, BiFunction<F, U, R> fieldOperator,
-                                                                  BiFunction<F, V, U> valueOperator,
-                                                                  Function<K, V> function, K key) {
-            final V value;
-            if ((value = function.apply(key)) != null) {
+        public final <E> SR ifSet(F field, BiFunction<F, Expression, AssignmentItem> fieldOperator,
+                                  BiFunction<F, E, Expression> valueOperator, @Nullable E value) {
+            if (value != null) {
                 this.onAddAssignmentItemPair(field, fieldOperator.apply(field, valueOperator.apply(field, value)));
             }
             return (SR) this;
@@ -585,41 +530,47 @@ abstract class CriteriaSupports {
         }
 
         @Override
-        public final <R extends AssignmentItem> SR setSpace(F field, BiFunction<F, Expression, R> fieldOperator,
+        public final SR setSpace(F field, BiFunction<F, Expression, AssignmentItem> fieldOperator,
                                                             BiFunction<F, String, Expression> valueOperator) {
             return this.onAddAssignmentItemPair(field, fieldOperator.apply(field, valueOperator.apply(field, field.fieldName())));
         }
 
 
         @Override
-        public final SR setRow(F field1, F field2, Supplier<SubQuery> supplier) {
+        public final SR setRow(F field1, F field2, SubQuery subQuery) {
             final List<F> fieldList;
-            fieldList = Arrays.asList(field1, field2);
-            this.consumer.accept(SQLs._itemPair(fieldList, supplier.get()));
+            fieldList = List.of(field1, field2);
+            this.consumer.accept(SQLs._itemPair(fieldList, subQuery));
             return (SR) this;
         }
 
         @Override
-        public final SR setRow(F field1, F field2, F field3, Supplier<SubQuery> supplier) {
+        public final SR setRow(F field1, F field2, F field3, SubQuery subQuery) {
             final List<F> fieldList;
-            fieldList = Arrays.asList(field1, field2, field3);
-            this.consumer.accept(SQLs._itemPair(fieldList, supplier.get()));
+            fieldList = List.of(field1, field2, field3);
+            this.consumer.accept(SQLs._itemPair(fieldList, subQuery));
             return (SR) this;
         }
 
         @Override
-        public final SR setRow(F field1, F field2, F field3, F field4, Supplier<SubQuery> supplier) {
+        public final SR setRow(F field1, F field2, F field3, F field4, SubQuery subQuery) {
             final List<F> fieldList;
-            fieldList = Arrays.asList(field1, field2, field3, field4);
-            this.consumer.accept(SQLs._itemPair(fieldList, supplier.get()));
+            fieldList = List.of(field1, field2, field3, field4);
+            this.consumer.accept(SQLs._itemPair(fieldList, subQuery));
             return (SR) this;
         }
 
         @Override
-        public final SR setRow(Consumer<Consumer<F>> consumer, Supplier<SubQuery> supplier) {
+        public final SR setRow(List<F> fieldList, SubQuery subQuery) {
+            this.consumer.accept(SQLs._itemPair(List.copyOf(fieldList), subQuery));
+            return (SR) this;
+        }
+
+        @Override
+        public final SR setRow(Consumer<Consumer<F>> consumer, SubQuery subQuery) {
             final List<F> fieldList = _Collections.arrayList();
-            consumer.accept(fieldList::add);
-            this.consumer.accept(SQLs._itemPair(fieldList, supplier.get()));
+            ClauseUtils.invokeConsumer(fieldList::add, consumer);
+            this.consumer.accept(SQLs._itemPair(fieldList, subQuery));
             return (SR) this;
         }
 
@@ -628,7 +579,7 @@ abstract class CriteriaSupports {
             final SubQuery query;
             if ((query = supplier.get()) != null) {
                 final List<F> fieldList;
-                fieldList = Arrays.asList(field1, field2);
+                fieldList = List.of(field1, field2);
                 this.consumer.accept(SQLs._itemPair(fieldList, query));
             }
             return (SR) this;
@@ -639,7 +590,7 @@ abstract class CriteriaSupports {
             final SubQuery query;
             if ((query = supplier.get()) != null) {
                 final List<F> fieldList;
-                fieldList = Arrays.asList(field1, field2, field3);
+                fieldList = List.of(field1, field2, field3);
                 this.consumer.accept(SQLs._itemPair(fieldList, query));
             }
             return (SR) this;
@@ -650,8 +601,17 @@ abstract class CriteriaSupports {
             final SubQuery query;
             if ((query = supplier.get()) != null) {
                 final List<F> fieldList;
-                fieldList = Arrays.asList(field1, field2, field3, field4);
+                fieldList = List.of(field1, field2, field3, field4);
                 this.consumer.accept(SQLs._itemPair(fieldList, query));
+            }
+            return (SR) this;
+        }
+
+        @Override
+        public final SR ifSetRow(List<F> fieldList, Supplier<SubQuery> supplier) {
+            final SubQuery query;
+            if (!fieldList.isEmpty() && (query = supplier.get()) != null) {
+                this.consumer.accept(SQLs._itemPair(List.copyOf(fieldList), query));
             }
             return (SR) this;
         }
@@ -659,9 +619,9 @@ abstract class CriteriaSupports {
         @Override
         public final SR ifSetRow(Consumer<Consumer<F>> consumer, Supplier<SubQuery> supplier) {
             final List<F> fieldList = _Collections.arrayList();
-            consumer.accept(fieldList::add);
+            ClauseUtils.invokeConsumer(fieldList::add, consumer);
             final SubQuery query;
-            if (fieldList.size() > 0 && (query = supplier.get()) != null) {
+            if (!fieldList.isEmpty() && (query = supplier.get()) != null) {
                 this.consumer.accept(SQLs._itemPair(fieldList, query));
             }
             return (SR) this;
